# transistor

./: .gitignore  CMakeLists.txt  PROGRESS.md  README.md
asm/: rvas
blink/: .gitignore  flash.tcl
blink/.Xil/: top_propImpl.xdc
blink/src/: top.v
cpu/: .gitignore  build.tcl
cpu/src/: top.v
jtag/: blink.svf  connect.py  jtag2232.py  loadsvf  test.svf
src/blink/: CMakeLists.txt  Makefile  build.tcl  digilent_zybo.cfg  openbuild.sh  openflash.sh
src/blink/tests/: blink_tests.cpp
src/blink/xdc/: zybo.xdc
src/cpu/: Makefile  build.tcl
src/cpu/src/: byte_ser.v  decode.v  test.v  top.v  uart.v
src/cpu/test/: test.py
src/cpu/xdc/: zybo.xdc
src/uart/: CMakeLists.txt  Makefile  build.tcl
src/uart/src/: top.v  uart.v
src/uart/tests/: uart_tests.cpp
src/uart/verilog/: a.out  top.v  uart.v
src/uart/xdc/: zybo.xdc
tools/asm/: a.out  emu  riscv_consts.h  test
tools/jtag/: jtag2232.py
uart/: Makefile  build.tcl  flash.tcl  vivado.jou
uart/src/: top.v  uart.v
uart/xdc/: zybo.xdc
